--- a/mandelbulber2/formula/ui/hypercomplex.ui
+++ b/mandelbulber2/formula/ui/hypercomplex.ui
@@ -72,7 +72,7 @@
 &lt;a href=&quot;&quot;&gt;&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;hybrid001.fract&lt;br&gt;hypercomplex001.fract&lt;br&gt;stereoscopic 004.fract&lt;br&gt;Krzysztof Marczak collection - license Creative Commons (CC-BY 4.0)/hypercomplex 01.fract&lt;br&gt;Krzysztof Marczak collection - license Creative Commons (CC-BY 4.0)/hypercomplex 02.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;benchmark-GPU.fract&lt;br&gt;hybrid001.fract&lt;br&gt;hypercomplex001.fract&lt;br&gt;stereoscopic 004.fract&lt;br&gt;Krzysztof Marczak collection - license Creative Commons (CC-BY 4.0)/hypercomplex 01.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
